2013-08-20 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.3.0

	*general: added pi5 for listing files by document type
	*general: document type can be choosen for every file
	*general: document types are flexibly editable

2013-08-08 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.2.4
	
	*general: deleted dependency for ext jq_fancybox	  

2013-07-24 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.2.3

	*ajax: deactivated some unused debugging functions
	*pi1:  added the functions to check if ext t3jquery is included 
		   otherwise chose an updated jquery library from res
	*pi1:  little change in jquery , hides button is download button 
		   is clicked
	*pi4:  added the functions to check if ext t3jquery is included 
		   otherwise chose an updated jquery library from res

2012-01-31 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.2.2

	*pi1:  debugging of bug not showing the renamed download icon

2012-01-30 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.2.1

	*pi4:  changed settings for pajinate for really loooooong lists of 
		   documents

2012-01-26 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.2.0

	*pi4: changed ajax call to dataType json, general code refactoring
	*ajax: changed the complete output from table to ul/div
	*ajax: included the pajinate script for displaying long lists of 
		   documents, neccessary css changes
	*general: changed state to stable

2011-08-06 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.4

	*pi4: deleted the debugging output from yesterday

2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.3

	*pi4: debugging of reported bug for displaying link button in case 
		 that a txt file can be found in the fink folder

2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.2

	*p1:  finally deleted hack for Produktmappe GB

2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.1

	*p1:  reenabled hack for Produktmappe GB
