@@ -1,3 +1,8 @@
+2013-08-22 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.3.1
+
+	*general: debugging of missing label for document type selector in 
+			  tca
+
 2013-08-20 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.3.0
 
 	*general: added pi5 for listing files by document type
